@@ -1,7 +1,6 @@
 package com.example.BookStore.service;
 
 import com.example.BookStore.DTO.AuthorDTO;
-import com.example.BookStore.DTO.BookDTO;
 import com.example.BookStore.mapstruct.AuthorMapper;
 import com.example.BookStore.mapstruct.BookMapper;
 import com.example.BookStore.model.Author;
@@ -13,8 +12,9 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.Collections;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -32,23 +32,12 @@ public class AuthorService {
 
     public List<AuthorDTO> getAllAuthors() {
         List<Author> authors = authorRepository.findAll();
-
-        return authors.stream().map(author -> {
-            AuthorDTO authorDTO = authorMapper.toDTO(author);
-
-            List<BookDTO> bookDTOs = author.getBooks() != null ? author.getBooks().stream()
-                    .map(bookMapper::toDTO)
-                    .collect(Collectors.toList()) : Collections.emptyList();
-
-            authorDTO.setBooks(bookDTOs);
-
-            return authorDTO;
-        }).collect(Collectors.toList());
+        return authors.stream().map(authorMapper::toDTOWithBooks).collect(Collectors.toList());
     }
 
     public AuthorDTO getAuthorById(String id) {
         return authorRepository.findById(id)
-                .map(authorMapper::toDTO)
+                .map(authorMapper::toDTOWithBooks)
                 .orElseThrow(() -> new RuntimeException(Response.notFound("Author", id)));
     }
 
@@ -65,40 +54,61 @@ public class AuthorService {
         Author author = authorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException(Response.notFound("Author", id)));
 
+        //- Delete foreigner reference
+        for(Book book : author.getBooks()) {
+            book.getAuthors().remove(author);
+        }
+        author.getBooks().clear();
+
         authorRepository.delete(author);
-        return authorMapper.toDTO(author);
+        return authorMapper.toDTOWithBooks(author);
     }
 
     @Transactional
     public AuthorDTO createAuthor(AuthorDTO authorDTO) {
-        Author author = authorMapper.toEntity(authorDTO);
-
-        List<Book> books = authorDTO.getBooks().stream()
-                .map(bookId -> bookRepository.findById(String.valueOf(bookId))
-                        .orElseThrow(() -> new RuntimeException("Book not found with ID: " + bookId)))
-                .collect(Collectors.toList());
-
-        books.forEach(book -> book.getAuthors().add(author));
-        author.setBooks(books);
-
-        return authorMapper.toDTO(authorRepository.save(author));
+        Author author = authorMapper.toEntityWithBooks(authorDTO, bookRepository);
+        return authorMapper.toDTOWithBooks(authorRepository.save(author));
     }
 
     @Transactional
     public AuthorDTO updateAuthor(String id, AuthorDTO authorDTO) {
-        Author author = authorRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Author not found with ID: " + id));
+        // Fetch the existing author from the database
+        Author authorDB = authorRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException(Response.notFound("Author", id)));
+//        Author requestAuthor = authorMapper.toEntityWithBooks(authorDTO, bookRepository);
 
-        author.setName(authorDTO.getName());
+        // Update the name of the existing (managed) author entity
+        authorDB.setName(authorDTO.getName());
 
-        List<Book> books = authorDTO.getBooks().stream()
-                .map(bookId -> bookRepository.findById(String.valueOf(bookId))
-                        .orElseThrow(() -> new RuntimeException("Book not found with ID: " + bookId)))
-                .collect(Collectors.toList());
+        // Fetch books and handle associations
+        List<Book> newBooks = authorDTO.getBooks().stream()
+                .map(bookId -> bookRepository.findById((String) bookId)
+                        .orElseThrow(() -> new RuntimeException(Response.notFound("Book", (String) bookId))))
+                .toList();
 
-        author.setBooks(books);
+        // Remove current associations to avoid duplicates
+        // and avoid unnecessary operations
+        Set<Book> currentBooks = new HashSet<>(authorDB.getBooks());
+        for (Book book : currentBooks) {
+            if (!newBooks.contains(book)) {
+                book.getAuthors().remove(authorDB);
+            }
+        }
 
-        return authorMapper.toDTO(authorRepository.save(author));
+        // Clear current associations
+        authorDB.getBooks().clear();
+
+        // Add new associations, avoiding duplicates
+        for (Book book : newBooks) {
+            if (!book.getAuthors().contains(authorDB)) {
+                book.getAuthors().add(authorDB);
+            }
+            authorDB.getBooks().add(book);
+        }
+
+        // Save the managed author entity, ensuring an update
+        Author savedAuthor = authorRepository.save(authorDB);
+        return authorMapper.toDTOWithBooks(savedAuthor);
     }
 }
 
